# NLP_College

./: .gitignore  .~lock.NLP LabTemplate.doc#  NLP LabTemplate.doc  README.md  main.py  pyproject.toml  requirements.txt
Exp1/: Lab_Submission.md
Exp1/data/: sample.txt
Exp1/output/: nltk_vs_spacy.csv
Exp2/: exp2.py
Exp3/: exp3.py
Exp4/: exp4.py
Exp5/: exp5.py
Exp7/: exp7.py  ner_results.csv
Exp7/custom_ner_model/ner/: model
Exp7/custom_ner_model/vocab/: strings.json
Exp7/ner_model/: meta.json
Exp7/ner_model/ner/: model
Exp7/ner_model/vocab/: strings.json
src/: experiment_1.py
